# playground_datalake

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  log.md  pyproject.toml
.github/workflows/: deploy.yml
coingecko/: __init__.py  coin.json  coingecko_fetcher.py
config/: tables_schema.yaml
dags/: adventure_works_pipeline.py  coingecko.py
scripts/: fetch_and_save.py  run.ps1
sql/: setup_dbt_user.sql
