[tool.poetry]
name = "playground-datalake"
version = "0.1.0"
description = "playground project to implement and trial different data engineering concepts"
authors = ["Amir <amir0akhavan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
