[tool.poetry]
name = "playground-datalake"
version = "0.1.0"
description = "playground project to implement and trial different data engineering concepts"
authors = ["Amir <amir0akhavan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pycoingecko = "^3.1.0"
boto3 = "^1.35.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
